fix set-input suggestion being wrapped for every lines

--- a/web/src/app/timeline-toolbar/components/set-input-popup.component.scss
+++ b/web/src/app/timeline-toolbar/components/set-input-popup.component.scss
@@ -17,6 +17,10 @@
 @use 'sass:color';
 @use '../../common.scss' as common;
 
+:host {
+  width: 600px;
+}
+
 .popup-container {
   background: white;
   padding: 12px;
